Fix spacing

--- a/frontend/src/styles/FakeContainer.module.css
+++ b/frontend/src/styles/FakeContainer.module.css
@@ -12,13 +12,12 @@
 
 .accordionContainer::after {
   content: "";
-  background-color: #9EBDE9;
+  background-color: #9ebde9;
   flex-grow: 1;
 }
 
 .accordionContainer .titleWord:nth-last-child(1),
-.accordionContainer .titleWord:nth-last-child(2)
- {
+.accordionContainer .titleWord:nth-last-child(2) {
   flex-grow: 0;
 }
 
@@ -50,8 +49,19 @@
   align-items: center;
   flex-grow: 1;
   justify-content: start;
-justify-content: center;
+  justify-content: center;
   cursor: pointer;
+}
+
+.titleWord:nth-last-child(1),
+.titleWord:nth-last-child(2),
+.titleWord:nth-last-child(3),
+.titleWord:nth-last-child(4),
+.titleWord:nth-last-child(5),
+.titleWord:nth-last-child(6),
+.titleWord:nth-last-child(7) {
+  flex-grow: 0;
+  padding-inline: 20px;
 }
 
 .titleWord.title.englishWord {
@@ -346,7 +356,6 @@ justify-content: center;
 .accordionContainer .kotzIcon img {
   flex-grow: 1;
   min-width: 60px;
-
 }
 
 .topBar .kotzIcon img {
@@ -557,16 +566,16 @@ justify-content: center;
   .isOpen .topBar {
     display: flex;
   }
-  
+
   .accordionContainer {
     font-size: clamp(0px, 7vh, 100px);
   }
-  
+
   .accordionContainer .accordion {
     overflow: auto;
   }
 
-  .accordionContainer .issueName, 
+  .accordionContainer .issueName,
   .accordionContainer .kotzIcon {
     /* display: none; */
   }
@@ -629,14 +638,12 @@ justify-content: center;
   }
 }
 
-
 /* Landscape */
 @media (min-aspect-ratio: 1), (orientation: landscape) {
   .accordionContainer {
     font-size: clamp(0px, min(12vh, 7vw), 100px);
   }
-  
-  
+
   .topBar {
     display: none;
   }
@@ -819,8 +826,6 @@ justify-content: center;
   }
 }
 
-
-
 @media (min-width: 600px) {
   .accordionContainer {
     font-size: 64px;
@@ -855,12 +860,12 @@ justify-content: center;
   .accordionContainer {
     font-size: 32px;
   }
-  
+
   .accordionContainer .subtitle {
     font-size: 11px;
     display: none;
   }
-  
+
   .accordionContainer .issueName h1 {
     font-size: 16px;
   }
@@ -896,7 +901,6 @@ justify-content: center;
     min-width: 16px;
   }
 }
-
 
 @media (min-width: 600px) and (max-height: 400px) {
   .accordionContainer {
@@ -964,18 +968,17 @@ justify-content: center;
   }
 }
 
-
 /* NEW */
 
 @media (min-width: 0px) and (max-width: 300px) and (min-height: 0px) and (max-height: 500px) {
   .accordionContainer {
     font-size: 18px;
   }
-  
+
   .accordionContainer .subtitle {
     display: none;
   }
-  
+
   .accordionContainer .issueName {
     padding: 4px;
   }
@@ -1001,11 +1004,11 @@ justify-content: center;
   .accordionContainer {
     font-size: 20px;
   }
-  
+
   .accordionContainer .subtitle {
     display: none;
   }
-  
+
   .accordionContainer .issueName {
     padding: 4px;
   }
@@ -1031,11 +1034,11 @@ justify-content: center;
   .accordionContainer {
     font-size: 24px;
   }
-  
+
   .accordionContainer .subtitle {
     display: none;
   }
-  
+
   .accordionContainer .issueName {
     padding: 4px;
   }
@@ -1061,11 +1064,11 @@ justify-content: center;
   .accordionContainer {
     font-size: 22px;
   }
-  
+
   .accordionContainer .subtitle {
     display: none;
   }
-  
+
   .accordionContainer .issueName {
     padding: 4px;
   }
@@ -1093,11 +1096,11 @@ justify-content: center;
   .accordionContainer {
     font-size: 38px;
   }
-  
+
   .accordionContainer .subtitle {
     display: none;
   }
-  
+
   .accordionContainer .issueName {
     padding: 4px;
   }
@@ -1125,11 +1128,11 @@ justify-content: center;
   .accordionContainer {
     font-size: 38px;
   }
-  
+
   .accordionContainer .subtitle {
     display: none;
   }
-  
+
   .accordionContainer .issueName {
     padding: 4px;
   }
@@ -1153,17 +1156,15 @@ justify-content: center;
   }
 }
 
-
-
 @media (min-width: 600px) and (max-width: 1000px) and (min-height: 0px) and (max-height: 500px) {
   .accordionContainer {
     font-size: 42px;
   }
-  
+
   .accordionContainer .subtitle {
     display: none;
   }
-  
+
   .accordionContainer .issueName {
     padding: 4px;
   }
@@ -1191,11 +1192,11 @@ justify-content: center;
   .accordionContainer {
     font-size: 48px;
   }
-  
+
   .accordionContainer .subtitle {
     display: none;
   }
-  
+
   .accordionContainer .issueName {
     padding: 4px;
   }
@@ -1223,11 +1224,11 @@ justify-content: center;
   .accordionContainer {
     font-size: 48px;
   }
-  
+
   .accordionContainer .subtitle {
     display: none;
   }
-  
+
   .accordionContainer .issueName {
     padding: 4px;
   }
@@ -1255,11 +1256,11 @@ justify-content: center;
   .accordionContainer {
     font-size: 48px;
   }
-  
+
   .accordionContainer .subtitle {
     display: none;
   }
-  
+
   .accordionContainer .issueName {
     padding: 4px;
   }
@@ -1287,11 +1288,11 @@ justify-content: center;
   .accordionContainer {
     font-size: 68px;
   }
-  
+
   .accordionContainer .subtitle {
     display: none;
   }
-  
+
   .accordionContainer .issueName {
     padding: 4px;
   }
@@ -1319,11 +1320,11 @@ justify-content: center;
   .accordionContainer {
     font-size: 68px;
   }
-  
+
   .accordionContainer .subtitle {
     /* display: none; */
   }
-  
+
   .accordionContainer .issueName {
     padding: 4px;
   }
